@@ -25,6 +25,7 @@ Version 1.3.6+svn:
       menu commands for chat, saving games, etc. are available.  Clicking
       end-of-turn ends the linger and takes you out.
     * The 'more' and 'help' button in the title screen now have a tooltip.
+    * Added a hotkey for clearing the chat messages.
 
   * Miscellaneous
     * Isle of Anduin renamed to Isle of Alduin to avoid copyright problems.
