@@ -52,6 +52,11 @@ public:
 	virtual void unit_hold_position();
 	virtual void end_unit_turn();
 	virtual void user_command();
+	virtual void user_command_1();
+#ifdef USRCMD2
+	virtual void user_command_2();
+	virtual void user_command_3();
+#endif
 	void linger(upload_log& log);
 
 protected:
